k8s/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-api
  namespace: notes-app
spec:
  selector:
    app: notes-app-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
