k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-frontend
spec:
  selector:
    app: notes-app-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
