k8s/pg-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-db
  namespace: notes-app
spec:
  selector:
    app: notes-app-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
