k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: notes-app-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes-app-frontend
                port:
                  number: 80
